sna/gen2: Fix CA/a8 blend factors

This is a revert of

commit 142f8461944b294dbc3fb0a7bf607bccf0bccc1f [2.99.911]
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Mar 10 15:20:16 2014 +0000

    sna/gen2: Tidy blend factor selection for the source

as that broke glyph rendering in firefox for instance.

Reported-by: Carl Eitsger <4607vrfcr84spd21f08@weg-werf-email.de>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77201
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>